--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.example.com/flaticon.css" />
 
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/css/bootstrap-icons.css" rel="stylesheet" />
